# rust-training

./: .gitignore  Cargo.toml  README.md  _redirects  build.sh  index-top.html  justfile  localbuild.sh
.github/actions/setup/: action.yml
.github/workflows/: build.yml  canary-build.yml  weekly-canary-build.yml
example-code/: Cargo.toml  build-ferrocene.sh  build.sh
example-code/ffi/use-rust-in-c/: .gitignore  Cargo.toml  Makefile
example-code/kani/kani-hello-world/: .editorconfig  .rustfmt.toml  Cargo.toml
example-code/kani/kani-hello-world/.devcontainer/: devcontainer.json  post-install.sh
example-code/kani/kani-hello-world/src/: lib.rs
example-code/native/: Cargo.toml
example-code/native/ffi/use-c-in-rust/: Cargo.toml  build.rs
example-code/native/ffi/use-c-in-rust/src/: cool_library.c  main.rs
example-code/native/ffi/use-rust-in-c/: .gitignore  Makefile  example.c  example.h
example-code/native/ffi/use-rust-in-c/src/: lib.rs
example-code/native/ffi/use-rust-in-c/windows-example/: .gitignore  windows-example.cpp  windows-example.sln  windows-example.vcxproj  windows-example.vcxproj.filters
example-code/native/lifetimes/: Cargo.toml
example-code/native/lifetimes/libdatabase/: Makefile  libdatabase.c  libdatabase.h  sample.c
example-code/native/lifetimes/libdatabase-rs/: Cargo.toml
example-code/native/lifetimes/libdatabase-rs/src/: lib.rs
example-code/native/lifetimes/libdatabase-sys/: Cargo.toml  build.rs  wrapper.h
example-code/native/lifetimes/rust-program/: Cargo.toml
example-code/native/lifetimes/rust-program/src/: main.rs
example-code/native/stdout/: Cargo.toml  README.md
example-code/native/stdout/.cargo/: config.toml
example-code/nrf52/: criticalup.toml
example-code/nrf52/bsp_demo/: Cargo.toml
example-code/nrf52/bsp_demo/.cargo/: config.toml
example-code/nrf52/bsp_demo/src/: main.rs
example-code/qemu-aarch32v78r/: Cargo.toml  README.md  build.sh  criticalup.toml  linker.ld  qemu.sh
example-code/qemu-aarch32v78r/.cargo/: config.toml
example-code/qemu-aarch32v78r/src/: cmsdk_uart.rs  critical_section.rs  lib.rs  uart.rs
example-code/qemu-aarch32v8r/: Cargo.toml  README.md  build.rs  commands.gdb  criticalup.toml  memory.x  qemu.sh
example-code/qemu-aarch32v8r/.cargo/: config.toml
example-code/qemu-aarch32v8r/src/: lib.rs
example-code/qemu-aarch64v8a/: Cargo.toml  README.md  build.rs  build.sh  criticalup.toml  linker.ld  memory.ld  qemu.sh
example-code/qemu-aarch64v8a/.cargo/: config.toml
example-code/qemu-aarch64v8a/src/: boot.S  critical_section.rs  lib.rs  main.rs  virt_uart.rs
example-code/qemu-arm64/: Cargo.toml  build.rs  linker.ld
example-code/qemu-arm64/.cargo/: config.toml
example-code/qemu-armv7r/: Cargo.toml  README.md  build.sh  criticalup.toml  linker.ld  qemu.sh
example-code/qemu-armv7r/.cargo/: config.toml
example-code/qemu-armv7r/src/: lib.rs  virt_uart.rs
example-code/qemu-armv8r/: Cargo.toml  README.md  build.rs  build.sh  criticalup.toml  linker.ld  qemu.sh  rust-toolchain.toml
example-code/qemu-armv8r/.cargo/: config.toml
example-code/qemu-armv8r/src/: boot.S  cmsdk_uart.rs  critical_section.rs  lib.rs  main.rs
example-code/qemu-common/: Cargo.toml
example-code/qemu-common/src/: lib.rs
example-code/qemu-common/src/cmsdk_timer/: mod.rs  registers.rs
example-code/qemu-common/src/cmsdk_uart/: asynch.rs  basic.rs  buffered.rs  mod.rs  mutex.rs  registers.rs
example-code/qemu-thumbv7em/: Cargo.toml  README.md  build.rs  commands.gdb  criticalup.toml  device.x  memory.x  qemu_run.sh  rust-toolchain.hide.toml
example-code/qemu-thumbv7em/.cargo/: config.toml
example-code/qemu-thumbv7em/src/: interrupts.rs  lib.rs  main.rs  timer.rs  uart.rs
example-code/qemu-thumbv8m/: Cargo.toml  build.rs  device.x  memory.x  qemu_run.sh
example-code/qemu-thumbv8m/.cargo/: config.toml
example-code/qemu-thumbv8m/src/: interrupts.rs
example-code/qemu-thumbv8m/src/uart/: buffered.rs  mutex.rs
mdbook-striplineno/: Cargo.toml  README.md
mdbook-striplineno/src/: main.rs
training-slides/: .gitignore  book.toml  build-local.py  build-locally.sh  build.sh  index-template.html  mdslides.toml  template.html
training-slides/src/: SUMMARY.md  advanced-generics-bounds.md  advanced-strings.md  async-avoiding-disaster.md  async-await-intro.md  async-building-blocks.md  async-component-interaction.md  async-implementation-details.md  async-intro-to-tokio.md  async-laziness-in-detail  async-laziness-in-detail.md  basic-generics.md  basic-types.md  board-support.md  booting-32bit-arm.md  booting-cortex-m.md  cargo-workspaces.md  closures.md  collections.md  coming-from-cpp.md  compound-types.md  control-flow.md  cortex-m-booting.md  cortex-m-exceptions-interrupts.md  cortex-m.md  cpp-cheatsheet.md  custom-target.md  dealing-with-unwrap.md  debugging-rust.md  deconstructing-send-arc-mutex.md  deconstructing-thread-scope.md  defmt.md  dependency-management.md  deref-coercions.md  design-patterns.md  documentation.md  drop-panic-abort.md  dynamic-dispatch.md  embedded-async.md  embedded-hals.md  (+66 more)
training-slides/src/images/: MemoryLayoutCodeAndRamSeparate.drawio  MemoryLayoutUnified.drawio  transaction-non-blocking.drawio
training-slides/theme/: head.hbs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs  tasks.rs
