[package]
name = "qemu-aarch32v8r"
version = "0.1.0"
edition = "2021"
authors = ["Ferrous Systems"]
license = "MIT OR Apache-2.0"
description = "A simple ARMv8-R demo application that runs in QEMU and compiles with Ferrocene"
default-run = "defmt"

[dependencies]
aarch32-cpu = { version = "0.1.0", features = ["critical-section-single-core"] }
aarch32-rt = "0.1.0"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-semihosting = "0.3.0"
embedded-alloc = "0.5.1"
qemu-common = { version = "0.1.0", path = "../qemu-common" }
semihosting = { version = "0.1.19", features = ["stdio"] }


[profile.release]
opt-level = "s"
