[package]
name = "qemu-armv7r"
version = "0.1.0"
edition = "2021"
authors = ["Ferrous Systems"]
license = "MIT OR Apache-2.0"
description = "A simple ARMv8-R demo application that runs in QEMU and compiles with Ferrocene"

[dependencies]
critical-section = { version = "1.1.2", features = ["restore-state-bool"] }
embedded-alloc = "0.5.1"

[profile.release]
opt-level = "s"
