[package]
name = "qemu-common"
version = "0.1.0"
edition = "2021"
authors = ["Ferrous Systems"]
license = "MIT OR Apache-2.0"
description = "Common drivers for Arm QEMU hardware"

[dependencies]
bitbybit = "2"
critical-section = "1.2"
defmt = "1"
derive-mmio = "0.6"
atomic-waker = "1"
heapless = "0.9"
embedded-io = "0.7"
embedded-io-async = "0.7"
nb = "1.1"
embedded-hal = { version = "1" }
