[package]
name = "qemu-thumbv7em"
version = "0.1.0"
edition = "2024"
authors = ["Ferrous Systems"]
license = "MIT OR Apache-2.0"
description = "Simple Armv7E-M demo applications that run in QEMU and compile with Ferrocene"
default-run = "defmt"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-types = "0.1"
cortex-m-rt = { version =  "0.7.5", features = ["device"] }
critical-section = "1.2.0"
num_enum = { version = "0.7", default-features = false }
defmt = "1"
defmt-semihosting = "0.3"
embedded-hal = "1"
embedded-hal-async = "1"
heapless = { version = "0.9", features = ["defmt"] }
embedded-io = "0.7"
nb = { version = "1.1.0", features = ["defmt-0-3"] }
qemu-common = { path = "../qemu-common" }
semihosting = { version = "0.1", features = ["stdio"] }
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2", features = ["cortex-m-systick"] }

embassy-sync = "0.8"
embassy-executor = { version = "0.10", features = [ "platform-cortex-m", "executor-thread" ]}

[dependencies.embassy-time]
version = "0.5"
git = "https://github.com/embassy-rs/embassy.git"
rev = "8c3394803dcae13c22a24920b774855145d858fd"
features = [
  "cortex-m",
  "cmsdk",
  # TODO: Remove as soon as there is a new embassy-time release. Right now, we have
  # to use the generic queue because otherwise there will be two versions of the
  # integrated queue which leads to silent failures, see https://github.com/embassy-rs/embassy/pull/6124
  "generic-queue-8"
]

[profile.dev]
opt-level = 1

[profile.release]
debug = 2
