[package]
name = "qemu-thumbv8m"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = { version =  "0.7.5", features = ["device"] }
cortex-m-semihosting = "0.5.0"
critical-section = "1.2.0"
defmt = "0.3.9"
defmt-semihosting = "0.1.0"
heapless = { version = "0.8.0", features = ["defmt-03", "mpmc_large"] }
nb = { version = "1.1.0", features = ["defmt-0-3"] }

[profile.dev]
opt-level = 1

[profile.release]
debug = 2
