[package]
name = "bsp_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
nrf52840-dk-bsp = { version = "0.2.0", features = [ "rt" ] }
defmt = "0.3"
defmt-rtt = "0.4"
critical-section = "1.2.0"
